<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete"
        android:icon="@drawable/vgs_checkout_ic_baseline_delete_24"
        android:title="@string/vgs_checkout_delete_menu_title"
        app:showAsAction="always" />
</menu>