<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbPresent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_padding_size_medium"
        android:text="@string/custom_checkout_present_btn_title"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_medium" />
</FrameLayout>