...
    <string name="vgs_checkout_pay_with_new_card">Pay with new Card</string>
    <string name="vgs_checkout_card_number">&#8226;&#8226;&#8226;&#8226; %1$s</string>
    <string name="vgs_checkout_expiry">%1$d/%2$s</string>
    <string name="vgs_checkout_delete_menu_title">Delete</string>
    <string name="vgs_checkout_delete_dialog_title">Remove card</string>
    <string name="vgs_checkout_delete_dialog_message">Are you sure you want to remove selected card?</string>
    <string name="vgs_checkout_delete_dialog_positive_button_title">Remove</string>
    <string name="vgs_checkout_delete_dialog_negative_button_title">Cancel</string>

    <!--Collect-->
    <string name="vgs_checkout_error_divider_mask">Divider for number can\'t be # or \\ symbol.</string>
    <string name="vgs_checkout_error_output_divider_mask">Output divider for number can\'t be # or \\ symbol.</string>
    <string name="vgs_checkout_error_divider_count_number_field">Divider for number can\'t be greater than 1 symbol.</string>
...
